# spinning-cube-voxel

./: .clangd  .gitignore  CMakeLists.txt  checklist  run
.cache/clangd/index/: gui.cpp.D7B79127F506CA46.idx  gui.h.31E9D6B0D36AB3E7.idx  imconfig.h.85D5E988991AB37E.idx  imgui.cpp.7927BD3560AAB3AC.idx  imgui.h.4E861D3B55D15B6E.idx  imgui_draw.cpp.138F4B7BC85640D9.idx  imgui_impl_sdl2.cpp.0941CEFC7FC1766A.idx  imgui_impl_sdl2.h.1A2E3D1CC05129FB.idx  imgui_impl_sdlrenderer2.cpp.542E5B84E25241F2.idx  imgui_impl_sdlrenderer2.h.DC636BE20CF07F49.idx  imgui_tables.cpp.01B503A5856BC0F8.idx  imgui_widgets.cpp.3BAC728B275A8479.idx  main.c.14ACAB02638EE7C5.idx  main.c.223B835F32535951.idx  renderer.c.95662CABFF29FEAD.idx  renderer.c.AA05E35D6D524762.idx  renderer.h.3A9338F0B904CDAA.idx  renderer.h.661BBF7236CA3457.idx  voxel.c.4F598B6DCB964E2F.idx  voxel.c.F88A8E2C1800CB60.idx  voxel.h.5ED82133FAC1E261.idx  voxel.h.FBEE75E50A30C29F.idx  window.c.15F4F54E897219DE.idx  window.c.C0FA66B8A0388FF5.idx  window.h.483CFB0FBE7CEF3D.idx  window.h.A8DCF304CF9AA263.idx
include/: gui.h  renderer.h  text.h  voxel.h  window.h
src/: gui.c  main.c  renderer.c  text.c  voxel.c  window.c
